force-app/main/default/objects/bpats__ATS_Email_Integration__mdt/bpats__ATS_Email_Integration__mdt.object-meta.xml
<CustomObject>
    <label>ATS Email Integration</label>
    <pluralLabel>ATS Email Integration</pluralLabel>
</CustomObject>