force-app/main/default/objects/bpats__ATS_Email_Integration__mdt/fields/bpats__API_key__c.field-meta.xml
<CustomField>
    <fullName>bpats__API_key__c</fullName>
    <label>API key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>