force-app/main/default/objects/bpats__ATS_Email_Integration__mdt/fields/bpats__Create_Activity_Record__c.field-meta.xml
<CustomField>
    <fullName>bpats__Create_Activity_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Activity Record</label>
    <type>Checkbox</type>
</CustomField>