force-app/main/default/objects/bpats__ATS_Email_Integration__mdt/fields/bpats__Email_Activity_Last_Job_Run_Time__c.field-meta.xml
<CustomField>
    <fullName>bpats__Email_Activity_Last_Job_Run_Time__c</fullName>
    <label>Email Activity Last Job Run Time</label>
    <type>DateTime</type>
</CustomField>