force-app/main/default/objects/bpats__ATS_Email_Integration__mdt/fields/bpats__Encryption_Key__c.field-meta.xml
<CustomField>
    <fullName>bpats__Encryption_Key__c</fullName>
    <label>Encryption Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>