force-app/main/default/objects/bpats__ATS_Email_Integration__mdt/fields/bpats__Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>bpats__Endpoint_URL__c</fullName>
    <label>Endpoint URL</label>
    <type>Url</type>
</CustomField>